core/src/zeit/cms/browser/resources/forms.css
/* 
 * forms 
 *
 * */

/* general input field styling */

input[type="button"],
input[type="submit"] {
    background-color: #dee7ec;
    border: 1px solid #196692;
    color: black;
    cursor: pointer;
    font-size: 100%;
    padding: 1px;
    vertical-align: middle;
}

input[type="button"]:hover,
input[type="submit"]:hover {
    color: #196692;
}


textarea{
    font:100% Monaco,"Courier New",Courier,monospace;
    border:1px solid #196692;
    color:Black;
    background:White url(layout/input_background.gif) repeat-x;
    width:100%;
}

input{
    font-family:"Lucida Grande",Verdana,Lucida,Helvetica,Arial,sans-serif;
    visibility:visible;
    border:1px solid #196692;
    color:Black;
    vertical-align:middle;
    background:White url(layout/input_background.gif) repeat-x;
}
select {
    border:1px solid #8cacbb;
    color:Black;
    background-color:White;
    vertical-align:top;
}


input[type="button"]:active,
input[type="submit"]:active {
    background-color: #ffdd00;
}

input[type="text"] {
    padding: 0.2em;
}


.dateTimeWidget {
    line-height: 2em;
}


/* formlib styling */

fieldset {
    padding-top: 1.5em;
    margin: 0;
}

legend {
    font-weight: bold;
    background-color: transparent;
    margin-bottom: -3em;
    margin-left: -0.6em;
    padding: 0em 0em 1em 1em;
}


.field.required label > span:after {
    content: "*";
    color: red;
}

.annotation {
    display: none;
}

.hint {
    color: #aaa;
}
.hint:hover {
    color: #4c4c4c;
}

.VisualClear {
    clear: both;
}



/* formlib widget styling */

.sequencewidget > tbody > tr > td {
    padding: 0.5em 0;
}

.sequencewidget > tbody > tr:hover {
    background: #ddd;
}

.sequencewidget > tbody > tr:hover:last-child {
    background: transparent;
}

.sequencewidget {
    border-collapse: collapse;
}

/* grouped layout */

.field {
    padding: 0.5em 0;
    margin-left: 0.5em
}

form .widgets-float .field {
    float: left;
    margin: 5px;
}

form .widgets-float .field label {
    height: 3em;
    display: block;
}

form .widgets-float .field .hint {
    display: none;
}

form .full-width {
    clear: both;
    right: 0;
}

form .full-width-float .field {
    float: left;
    margin: 5px;
    max-width: 15em;
}

form .full-width-float .hint {
    height: 5ex;
}


form .fullWidth {
    right: 0;
    clear: both;
}

form .column-left {
    width: 58%;
    float: left;
}


form .wide-widgets .field input[type="text"],
form .wide-widgets .field .sequencewidget,
form .wide-widgets .field .combinationFieldWidget,
form .wide-widgets .field textarea {
    width: 95%;
}

form .wide-widgets .field .object-widget > .object-reference {
    width: 80%;
}

form .column-right {
    float:  right;
    width: 35%;
}


form #form\.page,
form #form\.volume,
form #form\.year {
    width: 4em;
}

/* SMALL left column, larger right column */
form .column-left-small {
    clear: both;
    width: 30%;
    float: left;
}

form .column-left-small .field {
    padding-left: 5px;
    padding-right: 5px;
}

form .column-right-small {
    float:  right;
    width: 58%;
}


/* Line height: 1.3em * rows */
#form\.teaserText {
    height: 6.5em;
}
#form\.shortTeaserText,
#form\.hpTeaserText {
    height: 2.6em;
}

#form\.title {
    height: 1.3em;
}

#form\.info, 
#form\.subtitle,
#form\.html_description {
    height: 6.5em;
}

#form\.teaserTitle,
#form\.shortTeaserTitle,
#form\.hpTeaserTitle {
    height: 1.3em;
}

input#form\.copyrights[type=text] {
    width: 15em;
}

.gallery {
  background: transparent url("layout/fadeout.png") repeat-x 0 0;
  width: 100%;
}

table.gallery .image-column {
  text-align: center;
  width: 10em;
  vertical-align: top;
}

table.gallery td {
  padding-bottom: 3em;
}

table.gallery .caption {
  padding-bottom: 1em;
}

#folderActionForm {
    bottom: 0;
}

.BottomForm div.Column {
    width: 49%;
    float: left;
    margin-top: 1em;
}

#edit-form {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    overflow: auto;
    padding-bottom: 4em;
}


#edit-form > form > div.form-status {
    display: none;
}

#edit-form > form > div.field-group {
    position: absolute;
    bottom: 4em;
    left: 0;
    right: 0;
    top: 0;
    overflow: auto;
}

#edit-form > form > div#actionsView {
    position: absolute;
    height: 3em;
    bottom: 0;
    left: 0;
    right: 0;
}


/* image form */

form .column-left.image-form {
    width: 40%;
}

form .column-left.image-form input {
    width: inherit;
}

form .column-right.image-form {
    width: 48%;
}

textarea#form\.caption {
    height: 8em;
}

/* source editor */

#source-editor {
  height: 100%;
}

#source-editor textarea {
  width: 100%;
  height: 70ex;
}

.fckeditor  {
  width: 99%;
  height: 38em;
}

/* file form */

.file-details {
  float: right;
}

/* 
 * tablefilter 
 *
 * */

#tableFilter  {
  position: absolute;
  top: 3em;
  right: 1em;
}

#tableFilter input {
  font-family: sans-serif;
  width: 20em;
  color: #196692;
}

#add_menu {
  border: 1px solid black;
  font-family: sans-serif;
}


/* Search
 */

#SearchPanel #search\.text {
    width: 12em;
}

#SearchPanel fieldset {
    margin-top: 0.5em;
}

#SearchPanel #search\.year {
    width: 4em;
}

#SearchPanel #search\.volume {
    width: 4em;
}

#SearchPanel #search\.page {
    width: 2em;
}

#SearchPanel #search\.print_ressort {
    width: 8em;
}

#SearchPanel #search\.navigation {
    width: 8em;
}


iframe {
    position: fixed !important;
}


.widget > iframe {
    position: inherit !important;
}

